--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -180,6 +180,20 @@ input:focus {
   box-shadow: 0px 0px 8px rgba(110, 110, 110, 0.4);
   background-color: #fff;
   // margin: 0;
+  overflow: hidden;
+
+  .row {
+    height: 100%;
+  }
+
+  .col-3 {
+    height: 100%;
+  }
+
+  .col-9 {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 #features-card {
@@ -202,4 +216,8 @@ input:focus {
   color: rgb(100, 99, 99);
   margin-top: 0.2rem;
   font-family: "Montserrat", sans-serif;
+}
+
+.offer-cards {
+  height: 500px;
 }
